[gd_scene load_steps=2 format=3 uid="uid://v7edcmxp6qk7"]

[ext_resource type="Script" uid="uid://5kasg3iq2bfr" path="res://scripts/register_screen.gd" id="1_miul7"]

[node name="RegisterScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_miul7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = 276.0
offset_top = 198.0
offset_right = 776.0
offset_bottom = 388.0
scale = Vector2(1.36, 1.36)
alignment = 1

[node name="login" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "REGISTRATION"
horizontal_alignment = 1

[node name="Username" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "USERNAME"
alignment = 1

[node name="Password" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "PASSWORD"
alignment = 1

[node name="ConfirmButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "demo"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
